# approximate-quantiles

./: .gitignore  Cargo.toml  README.md  callgrind.out.11777  callgrind.out.11781  callgrind.out.13718  callgrind.out.13719  callgrind.out.9239  callgrind.out.9240
benches/: baseline.rs  buffered_t_digest.rs  par_t_digest.rs  relative_compactor.rs  t_digest.rs
examples/: accuracy.rs  demo.rs
src/: buffered_digest.rs  lib.rs  multi_digest.rs  parallel_digest.rs  relative_compactor.rs  sym_digest.rs  t_digest.rs  traits.rs
src/rc_sketch/: compaction_method.rs  mod.rs  rc_sketch.rs  rc_sketch2.rs
src/t_digest/: centroid.rs  mod.rs  par_t_digest.rs  scale_functions.rs  t_digest.rs
src/t_digest/avl_t_digest/: aggregate_centroid.rs  avl_tree_digest.rs  c_sum.rs  int_avl_tree.rs  int_avl_tree_store.rs  mod.rs  node_allocator.rs  tree_aggregate.rs  tree_centroid_store.rs
src/util/: keyed_sum_tree.rs  linear_digest.rs  mod.rs
