[package]
name = "approximate-quantiles"
version = "0.1.0"
authors = ["Connor Holloway <root_pfad@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.3.2"
rand = "0.7.3"
criterion = "0.3.3"

[profile.bench]
debug = true

[profile.release]
debug = true

[[bench]]
name = "relative_compactor"
harness = false

[[bench]]
name = "t_digest"
harness = false