[package]
name = "approximate-quantiles"
version = "0.1.0"
authors = ["Connor Holloway <root_pfad@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.3.2"
rand = "0.8.0"
criterion = "0.3.3"
rayon = "1.4.0"
num-traits = "0.2.14"
rand_distr = "0.4.0"

[dev-dependencies]
plotters = "0.3.0"

[profile.bench]
debug = true

[profile.release]
debug = true

[[bench]]
name = "relative_compactor"
harness = false

[[bench]]
name = "t_digest"
harness = false

[[bench]]
name = "buffered_t_digest"
harness = false

[[bench]]
name = "par_t_digest"
harness = false

[[bench]]
name = "baseline"
harness = false